removed unnecessary files, corrected the name of the classes

--- a/src/componets/Atoms/CountLabel/CountLabel.css
+++ b/src/componets/Atoms/CountLabel/CountLabel.css
@@ -1,6 +1,6 @@
 @import url('../../../font/Montserrat-Regular.css');
 
-.countLabel {
+.count-label {
     padding: 0 5px 3px 5px;
     font-size: 15px;
     letter-spacing: 2px;
