--- a/src/componets/Atoms/Divider/VerticalDivider.css
+++ b/src/componets/Atoms/Divider/VerticalDivider.css
@@ -1,5 +1,5 @@
-.verticalDivaider {
-    margin: 0 5px 0 5px;
+.vertical-divider {
+    margin: 0 5px;
     border-left: 2px solid #000000;
     height: 22px;
   }
