--- a/src/componets/Molecules/Button/ForwardButton/ForwardButton.css
+++ b/src/componets/Molecules/Button/ForwardButton/ForwardButton.css
@@ -1,8 +1,8 @@
-.forwardButton img {
+.forward-button > img {
     width: 35px;
     height: 35px;
 }
-.forwardButton {
+.forward-button {
     display: flex;
     align-items: center;
     justify-content: center;
