--- a/src/componets/Molecules/CarouselImage/CarouselImage.css
+++ b/src/componets/Molecules/CarouselImage/CarouselImage.css
@@ -1,9 +1,9 @@
-.caruselImage {
+.carusel-image {
     position: absolute;
     width: 100%;
     height: 450px;
 }
-.caruselImage img {
+.carusel-image > img {
     width: 100%;
     height: 450px;
 }
