--- a/src/componets/Molecules/SocialNetworksIcons/SocialNetworksIcons.css
+++ b/src/componets/Molecules/SocialNetworksIcons/SocialNetworksIcons.css
@@ -1,10 +1,10 @@
-.footerIcons>a>img {
+.social-networks-icons > a > img {
     width: 40px;
     height: 40px;
     margin: 5px;
 }
 
-.footerIcons {
+.social-networks-icons {
     display: flex;
     justify-content: center;
 }
