changed the code according to your suggestion

--- a/src/componets/Atoms/Buttons/BackButton/BackButton.css
+++ b/src/componets/Atoms/Buttons/BackButton/BackButton.css
@@ -1,10 +1,10 @@
-.button > img {
+.back-button-image {
     transform: rotate(180deg);
     width: 35px;
     height: 35px;
 }
 
-.button {
+.back-button {
     display: flex;
     align-items: center;
     justify-content: center;
