--- a/src/componets/Atoms/CountLabel/CountLabel.css
+++ b/src/componets/Atoms/CountLabel/CountLabel.css
@@ -1,4 +1,4 @@
-@import url('../../../font/Montserrat-Regular.css');
+@import url('../../../font/Font.css');
 
 .count-label {
     padding: 0 5px 3px 5px;
