--- a/src/componets/Molecules/CarouselImage/CarouselImage.css
+++ b/src/componets/Molecules/CarouselImage/CarouselImage.css
@@ -1,9 +1,10 @@
-.carusel-image {
+.carusel-image-wrapper {
     position: absolute;
     width: 100%;
     height: 450px;
 }
-.carusel-image > img {
+
+.carusel-img {
     width: 100%;
     height: 450px;
 }
