--- a/src/componets/Molecules/GalleryImages/GalleryImages.css
+++ b/src/componets/Molecules/GalleryImages/GalleryImages.css
@@ -1,4 +1,4 @@
-.gallery-img-wrapper {
+.gallery-img-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -6,15 +6,15 @@
     padding: 0px;
 }
 
-.gallery-img {
+.gallery-img-list {
     list-style-type: none;
     flex-basis: 48%;
 }
 
-.gallery-img > img {
+.gallery-image {
     object-fit: cover;
     width: 100%;
     height: 100%;
     vertical-align: middle;
     border-radius: 5px;
-  }
+}
