--- a/src/componets/Organisms/Gallery/Gallery.css
+++ b/src/componets/Organisms/Gallery/Gallery.css
@@ -1,12 +1,11 @@
-@import url(./../../../font/Poppins-SemiBold.css);
-@import url(./../../../font/Montserrat-Regular.css);
+@import url(./../../../font/Font.css);
 
 .gallery {
     background-color: #fafafa;
     padding: 40px 10px;
 }
 
-.gallery-title > h1 {
+.gallery-title {
     font-size: 38px;
     letter-spacing: 8px;
     color: #1e2633;
