--- a/src/componets/Organisms/Nav/Nav.css
+++ b/src/componets/Organisms/Nav/Nav.css
@@ -1,4 +1,4 @@
-@import url('../../../font/Pacifico-font.css');
+@import url('../../../font/Font.css');
 
 .nav {
     display: flex;
@@ -7,12 +7,12 @@
     height: 58px;
 }
 
-.nav > h1 {
+.nav-logo {
     padding-left: 10px;
     font-size: 25px;
     letter-spacing: 3px;
     color: #000000;
     font-weight: 400;
-    font-family: "Pacifico",sans-serif;
+    font-family: "Pacifico", sans-serif;
     margin: 0;
-} 
+}
