--- a/src/componets/Molecules/CarouselTitles/CarouselTitles.css
+++ b/src/componets/Molecules/CarouselTitles/CarouselTitles.css
@@ -1,6 +1,6 @@
 @import url(./../../../font/Font.css);
 
-.title-carusel {
+.title-carousel {
     font-size: 28px;
     letter-spacing: 3px;
     color: #ffffff;
