fixed using your commits

--- a/src/componets/Molecules/NavPanel/NavPanel.css
+++ b/src/componets/Molecules/NavPanel/NavPanel.css
@@ -4,3 +4,19 @@
     flex-wrap: wrap;
     align-items: center;
 }
+
+.hiden {
+    display: none;
+}
+
+.cart-menu-wrapper {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 58px;
+    right: 43px;
+    width: 200px;
+    height: 125px;
+    background-color: #ffffff;
+    z-index: 30;
+}
