--- a/src/componets/Organisms/Gallery/Gallery.css
+++ b/src/componets/Organisms/Gallery/Gallery.css
@@ -1,6 +1,6 @@
 @import url(./../../../font/Font.css);
 
-.gallery {
+.gallery-wrapper {
     background-color: #fafafa;
     padding: 40px 10px;
 }
@@ -13,8 +13,6 @@
     font-family: Poppins, sans-serif;
     margin-bottom: 0;
 }
-
-
 
 .gallery-subtitle {
     font-size: 11px;
