--- a/src/componets/Molecules/CarouselImages/CarouselImages.css
+++ b/src/componets/Molecules/CarouselImages/CarouselImages.css
@@ -1,12 +1,25 @@
-.carousel__image-wrapper {
-    width: 300%;
-    display: flex;
-    flex-shrink: 0;
-    transition: all ease 0.6s;
+.carousel__image {
+    width: 100%;
+    height: 450px;
 }
 
-.carousel__image {
-    width: 33.33%;
-    flex: 1;
-    height: 450px;
+.hidden {
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+.dissolution {
+    animation-name: dissolution;
+    animation-duration: 1.5s;
+}
+
+@keyframes dissolution {
+    from {
+        opacity: 0.3;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
