--- a/src/componets/Molecules/CarouselTitles/CarouselTitles.css
+++ b/src/componets/Molecules/CarouselTitles/CarouselTitles.css
@@ -1,10 +1,10 @@
 @import url('./../../../font/Font.css');
 
 .carousel-titls-wrapper {
-    display: flex;
+    
     top: 180px;
     width: 300%;
-    flex: 1;
+    
     transition: all ease 0.8s;
     position: absolute;
 }
@@ -29,4 +29,26 @@
     font-size: 22px;
     word-spacing: 7px;
     letter-spacing: 3px;
+}
+
+.slide {
+    display: none;
+    width: 100%;
+    flex: 1;
+    height: 100%;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 5s;
+}
+
+@keyframes fade {
+    from {
+        opacity:10%;
+    }
+
+    to {
+        opacity: 100%;
+    }
 }
